--- a/src/styles/close-button.css
+++ b/src/styles/close-button.css
@@ -1,17 +1,13 @@
 :host {
   --sgds-close-btn-color: var(--sgds-gray-400);
-  --sgds-close-btn-background: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='currentColor'%3E%3Cpath d='M.293.293a1 1 0 0 1 1.414 0L8 6.586 14.293.293a1 1 0 1 1 1.414 1.414L9.414 8l6.293 6.293a1 1 0 0 1-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 0 1-1.414-1.414L6.586 8 .293 1.707a1 1 0 0 1 0-1.414z'/%3E%3C/svg%3E");
-  --sgds-close-btn-opacity: 1;
-  --sgds-close-btn-hover-opacity: 0.75;
-  --sgds-close-btn-focus-shadow: 0 0 0 0.25rem rgba(89, 66, 219, 0.25);
-  --sgds-close-btn-focus-opacity: 1;
-  --sgds-close-btn-disabled-opacity: 0.25;
+  --sgds-close-btn-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='currentColor'%3E%3Cpath d='M.293.293a1 1 0 0 1 1.414 0L8 6.586 14.293.293a1 1 0 1 1 1.414 1.414L9.414 8l6.293 6.293a1 1 0 0 1-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 0 1-1.414-1.414L6.586 8 .293 1.707a1 1 0 0 1 0-1.414z'/%3E%3C/svg%3E");
+  --sgds-close-btn-focus-box-shadow: 0 0 0 0.25rem rgba(89, 66, 219, 0.25);
 }
 
 .btn-close {
   background-color: currentColor;
-  -webkit-mask-image: var(--sgds-close-btn-background);
-  mask-image: var(--sgds-close-btn-background);
+  -webkit-mask-image: var(--sgds-close-btn-image);
+  mask-image: var(--sgds-close-btn-image);
   -webkit-mask-repeat: no-repeat;
   mask-repeat: no-repeat;
   -webkit-mask-position: center;
@@ -20,7 +16,7 @@
   border-radius: 0.3125rem;
   box-sizing: content-box;
   height: 0.875rem;
-  opacity: var(--sgds-close-btn-opacity);
+  opacity: 1;
   padding: 0;
   width: 0.875rem;
   cursor: pointer;
@@ -32,19 +28,19 @@
 }
 
 .btn-close:hover {
-  opacity: var(--sgds-close-btn-hover-opacity);
+  opacity: 0.75;
   text-decoration: none;
 }
 
 .btn-close:focus {
-  box-shadow: var(--sgds-close-btn-focus-shadow);
-  opacity: var(--sgds-close-btn-focus-opacity);
+  box-shadow: var(--sgds-close-btn-focus-box-shadow);
+  opacity: 1;
   outline: 0;
 }
 
 .btn-close.disabled,
 .btn-close:disabled {
-  opacity: var(--sgds-close-btn-disabled-opacity);
+  opacity: 0.25;
   pointer-events: none;
   user-select: none;
 }
