refactor(*): create form semantic tokens used in form components

--- a/root.css
+++ b/root.css
@@ -149,17 +149,24 @@
   --sgds-focus-ring-opacity: 0.25;
   --sgds-focus-ring-color: rgba(90, 66, 192, 0.25);
   --sgds-form-valid-color: var(--sgds-success);
-  --sgds-form-valid-border-color: var(--sgds-success);
   --sgds-form-invalid-color: var(--sgds-danger);
-  --sgds-form-invalid-border-color: var(--sgds-danger);
   --sgds-form-valid-icon: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='%23006b00'%3E%3Cpath d='M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425a.247.247 0 0 1 .02-.022Z'/%3E%3C/svg%3E");
   --sgds-form-invalid-icon: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='%23b90000'%3E%3Cpath d='M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z'/%3E%3Cpath d='M7.002 11a1 1 0 1 1 2 0 1 1 0 0 1-2 0zM7.1 4.995a.905.905 0 1 1 1.8 0l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 4.995z'/%3E%3C/svg%3E");
   --sgds-form-feedback-font-size: 0.875rem;
   --sgds-form-border-color: var(--sgds-gray-400);
-  --sgds-form-focus-box-shadow-color: var(--sgds-info-300);
+  --sgds-form-label-font-weight: 700;
+  --sgds-form-label-color: var(--sgds-body-color);
+  --sgds-form-hint-text-color: var(--sgds-body-color-lighter);
+  --sgds-form-hint-text-font-weight: var(--sgds-body-font-weight);
+  --sgds-form-hint-text-font-size: var(--sgds-body-font-size);
   --sgds-form-focus-box-shadow:  0px 0px 0px var(--sgds-focus-width)
-  var(--sgds-form-focus-box-shadow-color);
+  var(--sgds-info-300);
+  --sgds-form-focus-invalid-box-shadow:  0px 0px 0px var(--sgds-focus-width)
+  var(--sgds-danger-300);
+  --sgds-form-focus-valid-box-shadow:  0px 0px 0px var(--sgds-focus-width)
+  var(--sgds-success-300);
   --sgds-form-bg: var(--sgds-body-bg);
+  --sgds-form-border-width: 1px;
 
   --sgds-focus-width: 0.13rem;
   --sgds-disabled-color: var(--sgds-gray-400);
