feat(modal): new css props introduced and renamed existing
BREAKING CHANGE: added --sgds prefix to existing tokens and rename to follow convention strictly

--- a/src/components/Checkbox/checkbox.css
+++ b/src/components/Checkbox/checkbox.css
@@ -66,6 +66,9 @@ input {
   border-color: var(--sgds-border-color);
   pointer-events: none;
 }
+.form-check-label{
+  color: var(--sgds-form-label-color);
+}
 .form-check-input:disabled ~ .form-check-label,
 .form-check-input[disabled] ~ .form-check-label {
   cursor: default;
