--- a/src/components/Alert/alert.css
+++ b/src/components/Alert/alert.css
@@ -1,5 +1,3 @@
-@import "../../styles/close-button.css";
-
 :host {
   /* NEW in 2.0 */
   --sgds-alert-bg: transparent;
@@ -140,7 +138,7 @@ i {
   padding-right: 3rem;
 }
 
-.alert-dismissible .btn-close {
+.alert-dismissible sgds-close-button {
   position: absolute;
   right: 1rem;
   top: 1.25rem;
