--- a/src/components/Drawer/drawer.css
+++ b/src/components/Drawer/drawer.css
@@ -1,146 +1,144 @@
-@import "../../styles/close-button";
-  :host {
-    --sgds-drawer-padding: var(--sgds-spacer-4);
-    --sgds-drawer-size: 35rem;
-    --sgds-drawer-bg: var(--sgds-white);
-    --sgds-drawer-button-gap: var(--sgds-spacer-2);
-    --sgds-drawer-overlay-bg: rgba(0,0,0,.5);
-    --sgds-drawer-z-index: 1055;
-    --sgds-drawer-font-family: var(--sgds-body-font-family);
-    display: contents;
-  }
+:host {
+  --sgds-drawer-padding: var(--sgds-spacer-4);
+  --sgds-drawer-size: 35rem;
+  --sgds-drawer-bg: var(--sgds-white);
+  --sgds-drawer-button-gap: var(--sgds-spacer-2);
+  --sgds-drawer-overlay-bg: rgba(0, 0, 0, 0.5);
+  --sgds-drawer-z-index: 1055;
+  --sgds-drawer-font-family: var(--sgds-body-font-family);
+  display: contents;
+}
 
-  .drawer {
-    top: 0;
-    inset-inline-start: 0;
-    width: 100%;
-    height: 100%;
-    pointer-events: none;
-    overflow: hidden;
-    font-family: var(--sgds-drawer-font-family);
-  }
+.drawer {
+  top: 0;
+  inset-inline-start: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  overflow: hidden;
+  font-family: var(--sgds-drawer-font-family);
+}
 
-  .drawer-fixed {
-    position: fixed;
-    z-index: var(--sgds-drawer-z-index);
-  }
+.drawer-fixed {
+  position: fixed;
+  z-index: var(--sgds-drawer-z-index);
+}
 
-  .drawer-panel {
-    position: absolute;
-    display: flex;
-    flex-direction: column;
-    z-index: 2;
-    max-width: 100%;
-    max-height: 100%;
-    background-color: var(--sgds-drawer-bg);
-    box-shadow: 0 2px 8px hsl(240 3.8% 46.1% / 12%);
-    overflow: auto;
-    pointer-events: all;
-  }
+.drawer-panel {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  z-index: 2;
+  max-width: 100%;
+  max-height: 100%;
+  background-color: var(--sgds-drawer-bg);
+  box-shadow: 0 2px 8px hsl(240 3.8% 46.1% / 12%);
+  overflow: auto;
+  pointer-events: all;
+}
 
-  .drawer-panel:focus {
-    outline: none;
-  }
+.drawer-panel:focus {
+  outline: none;
+}
 
-  .drawer-top .drawer-panel {
-    top: 0;
-    inset-inline-end: auto;
-    bottom: auto;
-    inset-inline-start: 0;
-    width: 100%;
-    height: var(--sgds-drawer-size);
-  }
+.drawer-top .drawer-panel {
+  top: 0;
+  inset-inline-end: auto;
+  bottom: auto;
+  inset-inline-start: 0;
+  width: 100%;
+  height: var(--sgds-drawer-size);
+}
 
-  .drawer-end .drawer-panel {
-    top: 0;
-    inset-inline-end: 0;
-    bottom: auto;
-    inset-inline-start: auto;
-    width: var(--sgds-drawer-size);
-    height: 100%;
-  }
+.drawer-end .drawer-panel {
+  top: 0;
+  inset-inline-end: 0;
+  bottom: auto;
+  inset-inline-start: auto;
+  width: var(--sgds-drawer-size);
+  height: 100%;
+}
 
-  .drawer-bottom .drawer-panel {
-    top: auto;
-    inset-inline-end: auto;
-    bottom: 0;
-    inset-inline-start: 0;
-    width: 100%;
-    height: var(--sgds-drawer-size);
-  }
+.drawer-bottom .drawer-panel {
+  top: auto;
+  inset-inline-end: auto;
+  bottom: 0;
+  inset-inline-start: 0;
+  width: 100%;
+  height: var(--sgds-drawer-size);
+}
 
-  .drawer-start .drawer-panel {
-    top: 0;
-    inset-inline-end: auto;
-    bottom: auto;
-    inset-inline-start: 0;
-    width: var(--sgds-drawer-size);
-    height: 100%;
-  }
+.drawer-start .drawer-panel {
+  top: 0;
+  inset-inline-end: auto;
+  bottom: auto;
+  inset-inline-start: 0;
+  width: var(--sgds-drawer-size);
+  height: 100%;
+}
 
-  .drawer-header {
-    display: flex;
-    padding: var(--sgds-drawer-padding);
-  }
+.drawer-header {
+  display: flex;
+  padding: var(--sgds-drawer-padding);
+}
 
-  .drawer-title {
-    flex: 1 1 auto;
-    font: inherit;
-    font-size: calc(1.275rem + 0.3vw);
-    line-height: 1.33;
+.drawer-title {
+  flex: 1 1 auto;
+  font: inherit;
+  font-size: calc(1.275rem + 0.3vw);
+  line-height: 1.33;
 
-    margin: 0;
-  }
+  margin: 0;
+}
 
-  .drawer-header-actions {
-    flex-shrink: 0;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: end;
-    cursor: pointer;
-    gap: var(--sgds-drawer-button-gap);
-    padding: 0 var(--sgds-drawer-padding);
-  }
+.drawer-header-actions {
+  flex-shrink: 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: end;
+  cursor: pointer;
+  gap: var(--sgds-drawer-button-gap);
+  padding: 0 var(--sgds-drawer-padding);
+}
 
-  .drawer-header-actions .drawer-close {
-    flex: 0 0 auto;
-    display: flex;
-    align-self: center;
-  }
+.drawer-header-actions .drawer-close {
+  flex: 0 0 auto;
+  display: flex;
+  align-self: center;
+}
 
-  .drawer-body {
-    flex: 1 1 auto;
-    display: block;
-    padding: var(--sgds-drawer-padding);
-    overflow: auto;
-    -webkit-overflow-scrolling: touch;
-  }
+.drawer-body {
+  flex: 1 1 auto;
+  display: block;
+  padding: var(--sgds-drawer-padding);
+  overflow: auto;
+  -webkit-overflow-scrolling: touch;
+}
 
-  .drawer-footer {
-    text-align: right;
-    padding: var(--sgds-drawer-padding);
-  }
+.drawer-footer {
+  text-align: right;
+  padding: var(--sgds-drawer-padding);
+}
 
-  .drawer-footer ::slotted(sgds-button:not(:last-of-type)) {
-    margin-inline-end: var(--sgds-drawer-button-gap);
-  }
+.drawer-footer ::slotted(sgds-button:not(:last-of-type)) {
+  margin-inline-end: var(--sgds-drawer-button-gap);
+}
 
-  .drawer:not(.drawer-has-footer) .drawer-footer {
-    display: none;
-  }
+.drawer:not(.drawer-has-footer) .drawer-footer {
+  display: none;
+}
 
-  .drawer-overlay {
-    display: block;
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    background-color: var(--sgds-drawer-overlay-bg);
-    pointer-events: all;
-  }
+.drawer-overlay {
+  display: block;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: var(--sgds-drawer-overlay-bg);
+  pointer-events: all;
+}
 
-  .drawer-contained .drawer-overlay {
-    display: none;
-  }
-
+.drawer-contained .drawer-overlay {
+  display: none;
+}
