--- a/src/components/Tab/tab.css
+++ b/src/components/Tab/tab.css
@@ -1,8 +1,8 @@
-*,
-:after,
-:before {
-  box-sizing: border-box;
+:host {
+  --sgds-tab-theme-color: var(--sgds-primary);
+  display: inline-block;
 }
+
 ul {
   padding-left: 2rem;
 }
@@ -31,10 +31,6 @@ ul {
   color: #0c5a96;
 }
 /** scss */
-:host {
-  --tab-theme-color: var(--sgds-primary);
-  display: inline-block;
-}
 
 li.nav-item {
   div.nav-link {
@@ -58,8 +54,8 @@ li.nav-item {
       }
       &.active,
       &:hover {
-        border-color: var(--tab-theme-color); 
-        color: var(--tab-theme-color); 
+        border-color: var(--sgds-tab-theme-color); 
+        color: var(--sgds-tab-theme-color); 
         font-weight: 700; 
       }
       &.disabled {
@@ -85,7 +81,7 @@ li.nav-item {
       &.active,
       &:hover {
         color: #fff; 
-        background-color: var(--tab-theme-color); 
+        background-color: var(--sgds-tab-theme-color); 
       }
       &.disabled {
         background-color: var(--sgds-gray-200);
@@ -105,7 +101,7 @@ li.nav-item {
       border: none;
       &.active,
       &:hover {
-        border-bottom: 0.125rem solid var(--tab-theme-color); 
+        border-bottom: 0.125rem solid var(--sgds-tab-theme-color); 
         font-weight: 700;
         background-color: transparent;
       }
