chore(tab panel): rename css variable
BREAKING CHANGE: Users who previously use this variable will find that the css they passed in no
longer applies and will have styling breaks

--- a/src/components/Tab/tab-panel.css
+++ b/src/components/Tab/tab-panel.css
@@ -1,10 +1,10 @@
 :host {
-  --tab-panel-padding-y: 1rem;
+  --sgds-tab-panel-padding-y: 1rem;
   display: block;
 }
 .tab-panel {
   display: block;
-  padding: var(--tab-panel-padding-y) 0;
+  padding: var(--sgds-tab-panel-padding-y) 0;
 }
 .tab-panel:not(.tab-panel--active) {
   display: none;
