--- a/src/components/Tooltip/tooltip.css
+++ b/src/components/Tooltip/tooltip.css
@@ -1,5 +1,8 @@
-//TODO: Dismissible tooltip does not need close button anymore
-@import "../../styles/close-button.css";
+:host {
+  --sgds-tooltip-max-width: 20rem;
+  display: inline-block;
+}
+
   .tooltip {
     --sgds-tooltip-zindex: 1080;
     --sgds-tooltip-max-width: 200px;
@@ -116,11 +119,6 @@
     margin-top: 0.25rem !important;
   }
   /** scss */
-
-  :host {
-    --tooltip-max-width: 20rem;
-    display: inline-block;
-  }
 
   .tooltip-inner {
     max-width: var(--tooltip-max-width);
